# G4_RPC

./: README.md
RPC/: CMakeLists.txt  README.md  main.cpp  rpc_geom_copy.gdml
RPC/include/: EventAction.hh  G01ActionInitialization.hh  G01DetectorConstruction.hh  G01GeneralPrimaryGeneratorAction.hh  G01PrimaryGeneratorAction.hh  RunAction.hh  SteppingAction.hh
RPC/src/: CMakeLists.txt  EventAction.cc  G01ActionInitialization.cc  G01GeneralPrimaryGeneratorAction.cc  G01PrimaryGeneratorAction.cc  Makefile  RunAction.cc  SteppingAction.cc  cmake_install.cmake
RPC_Build/: CMakeCache.txt  Makefile  cmake_install.cmake  mical_g4  run.mac  vis.mac
RPC_Build/src/: Makefile  cmake_install.cmake
